# EchoVault

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
notebooks/: clean-youtube-activity.ipynb
src/: agent.py  config.py  frontend.py  mcp_client.py  mcp_server.py  middleware.py  model.py  visualization_agent.py
